--- a/buspain/res/layout/activity_main.xml
+++ b/buspain/res/layout/activity_main.xml
@@ -10,13 +10,13 @@
 
     <LinearLayout
         android:id="@+id/linearLayout1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:orientation="vertical" >
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="0dp"
             android:layout_marginBottom="0dp"
@@ -25,7 +25,7 @@
 
             <TextView
                 android:id="@+id/bus_no"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="31dp"
                 android:text="@string/bus_no" />
 
@@ -38,12 +38,12 @@
                 android:layout_toRightOf="@+id/linearLayout1"
                 android:ems="10" >
 
-                <requestFocus />
+                <requestFocus android:layout_width="wrap_content" />
             </EditText>
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="0dp"
             android:layout_marginLeft="0dp"
@@ -51,36 +51,84 @@
 
             <TextView
                 android:id="@+id/bus_company"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="31dp"
                 android:text="@string/bus_company" />
 
-            <ExpandableListView
+            <Spinner
                 android:id="@+id/bus_company_list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="0dp"
-                android:layout_marginLeft="5dp" >
-            </ExpandableListView>
+                android:layout_width="170dp"
+                android:layout_height="60dp"
+                android:layout_marginLeft="30dp"
+                android:entries="@array/bus_companies"
+                android:prompt="@string/bus_prompt" >
+
+            </Spinner>
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
             android:layout_margin="0dp"
             android:layout_marginLeft="0dp"
             android:layout_marginTop="66dp" >
 
             <TextView
                 android:id="@+id/bus_expectedtime"
-                android:layout_width="wrap_content"
+                android:layout_width="80dp"
                 android:layout_height="31dp"
                 android:text="@string/bus_expectedtime" />
 
             <TimePicker
                 android:id="@+id/timePicker1"
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="35dp" 
+             />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="66dp" >
+
+            <Button
+                android:id="@+id/button1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="My Bus is late" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="My Bus arrived" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_margin="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="66dp" >
+
+            <Button
+                android:id="@+id/start"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="Start" />
+
+            <Button
+                android:id="@+id/bus_reset"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="80dp"
+                android:layout_marginTop="0dp"
+                android:text="Reset" />
         </LinearLayout>
     </LinearLayout>
 
