change Rates to Routes

--- a/buspain/res/layout/activity_home.xml
+++ b/buspain/res/layout/activity_home.xml
@@ -32,7 +32,7 @@
             android:id="@+id/rate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Rates" />
+            android:text="Routes" />
 
     </LinearLayout>
 
